--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "method-override": "^2.3.6",
-    "pug": "^2.0.0-beta3"
+    "pug": "^2.0.0-beta3",
+    "sequelize": "^3.23.6"
   }
 }
