--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "express-session": "^1.14.0",
     "gulp": "^3.9.1",
     "gulp-connect": "^4.2.0",
     "gulp-sass": "^2.3.2",
     "method-override": "^2.3.6",
     "passport": "^0.3.2",
     "passport-http": "^0.3.0",
+    "passport-local": "^1.0.0",
     "pg": "^6.0.3",
     "pg-hstore": "^2.3.2",
     "pug": "^2.0.0-beta4",
