--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/Tanachi/express-gallery#readme",
   "dependencies": {
     "body-parser": "^1.15.2",
+    "connect-redis": "^3.1.0",
     "express": "^4.14.0",
     "express-session": "^1.14.0",
     "gulp": "^3.9.1",
