--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "connect-redis": "^3.1.0",
     "express": "^4.14.0",
     "express-session": "^1.14.0",
+    "faker": "^3.1.0",
     "gulp": "^3.9.1",
     "gulp-connect": "^4.2.0",
     "gulp-sass": "^2.3.2",
